--- a/public/style.css
+++ b/public/style.css
@@ -33,7 +33,7 @@ main {
 
 .my-message {
     float: right !important;
-    background-color: lightblue !important;
+    background-color: #ee6e73 !important;
 }
 
 .margin-bottom-zero {
